# nnssl_etro

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml  readme.md  valohai.yaml
_cluster_haicore/: resubmission.sh  start_job.sh  start_sweep.sh
documentation/: Getting_started_OpenMind.md  dataset_format.md  installation_instructions.md  set_environment_variables.md  setting_up_paths.md
nnssl/: paths.py  valohai_tester.py
nnssl/architectures/: build_architecture.py  convert_to_spark.py  spark_model.py  spark_utils.py
nnssl/dataset_conversion/: Dataset027_ACDC.py  Dataset737_FloyPrototyping.py  Dataset740_OASIS3.py  Dataset741_SMALL_OASIS3_T1.py  Dataset741and742_SMALL_OASIS3.py  convert_raw_dataset_from_old_nnunet_format.py  filter_mris.py  filter_mris_all.py  fiona_dev_300_v2.py
nnssl/evaluation/: accumulate_cv_results.py  evaluate_predictions.py
nnssl/experiment_planning/: plan_and_preprocess_api.py  plan_and_preprocess_entrypoints.py  verify_dataset_integrity.py
nnssl/experiment_planning/dataset_fingerprint/: abstract_fingerprint_extraction.py  default_fingerprint_extractor.py
nnssl/experiment_planning/experiment_planners/: default_experiment_planner.py  plan.py  resencUNet_planner.py
nnssl/experiment_planning/plans_for_pretraining/: move_plans_between_datasets.py
nnssl/imageio/: natural_image_reader_writer.py  simpleitk_reader_writer.py  tif_reader_writer.py
nnssl/inference/: predict_from_raw_data.py
nnssl/model_sharing/: entry_points.py  model_download.py  model_import.py
nnssl/preprocessing/preprocessors/: default_preprocessor.py
nnssl/preprocessing/resampling/: utils.py
nnssl/run/: run_training.py
nnssl/scripts/: create_valohai_inputs.py  fine_grained_vh_inputs.py  get_patients_of_interest.py  raw_dataset_to_filtered_dataset.py  valohai_requests.py
nnssl/ssl_data/dataloading/: data_loader_3d.py  nnssl_dataset.py  utils.py  volume_fusion_transform.py
nnssl/ssl_utilities/: mask_creation.py
nnssl/training/logging/: nnssl_logger.py
nnssl/training/loss/: compound_losses.py  contrastive_loss.py  mse_loss.py  spark_loss.py
nnssl/training/nnsslTrainer/: AbstractMAETrainer.py  AbstractTrainer.py  BaseMAE.py  BaseMAETrainer.py  DummyMAETrainer.py  EffSparkTrainer.py  LoadingEfficientSparkTrainer.py  ModelGenesisTrainer.py  SparkEinOpsTrainer.py  SparkNoTokenTrainer.py  SparkTrainer.py  VariableSparkTrainer.py  nnsslAbstractMAETrainer.py  nnsslDummyMAE.py  nnsslSparkTrainer.py  nnsslTrainer.py
nnssl/utilities/: create_pp_niftis.py  dataset_name_id_conversion.py  overlay_plots.py  serialization.py  utils.py
nnssl/valohai_compatibility/: prepare_valohai_paths.py
src/nnssl/: apitoken.py  configuration.py  paths.py  valohai_tester.py
src/nnssl/adaptation_planning/: adaptation_plan.py
src/nnssl/architectures/: architecture_registry.py  build_architecture.py  evaMAE_module.py  evaSimMIM_module.py  get_network_by_name.py  get_network_from_plan.py  (+10 more)
tests/volume_fusion/: test_mixing.py
(+152 files in other folders)
