[project]
name = "nnssl"
version = "0.1"
requires-python = ">=3.9"
description = "nnSSL is a framework for pre-training medical 3D images."
readme = "readme.md"
license = { file = "LICENSE" }
authors = [
    { name = "Tassilo Wald", email = "tassilo.wald@dkfz-heidelberg.de"},
    { name = "Helmholtz Imaging & German Cancer Research Center (DKFZ)" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
keywords = [
    'deep learning',
    'image segmentation',
    'semantic segmentation',
    'medical image analysis',
    'medical image segmentation',
    'nnSSL',
    'self supervised learning'
]
dependencies = [
    "torch>=2.0.0",
    "acvl-utils>=0.2",
    "dynamic-network-architectures>=0.2",
    "tqdm",
    "dicom2nifti",
    "scipy",
    "batchgenerators>=0.25",
    "numpy",
    "scikit-learn",
    "scikit-image>=0.19.3",
    "SimpleITK>=2.2.1",
    "pandas",
    "graphviz",
    'tifffile',
    'requests',
    "nibabel",
    "matplotlib",
    "seaborn",
    "imagecodecs",
    "yacs"
]

[project.urls]
homepage = "https://git.dkfz.de/mic/personal/group2/tassilow/nnssl"
repository = "https://git.dkfz.de/mic/personal/group2/tassilow/nnssl"

[project.scripts]
nnSSL_plan_and_preprocess = "nnssl.experiment_planning.plan_and_preprocess_entrypoints:plan_and_preprocess_entry"
nnSSL_extract_fingerprint = "nnssl.experiment_planning.plan_and_preprocess_entrypoints:extract_fingerprint_entry"
nnSSL_plan_experiment = "nnssl.experiment_planning.plan_and_preprocess_entrypoints:plan_experiment_entry"
nnSSL_preprocess = "nnssl.experiment_planning.plan_and_preprocess_entrypoints:preprocess_entry"
nnSSL_train = "nnssl.run.run_training:run_training_entry"
nnSSL_plot_overlay_pngs = "nnssl.utilities.overlay_plots:entry_point_generate_overlay"
nnSSL_download_pretrained_model_by_url = "nnssl.model_sharing.entry_points:download_by_url"
nnSSL_install_pretrained_model_from_zip = "nnssl.model_sharing.entry_points:install_from_zip_entry_point"
nnSSL_export_model_to_zip = "nnssl.model_sharing.entry_points:export_pretrained_model_entry"
nnSSL_move_plans_between_datasets = "nnssl.experiment_planning.plans_for_pretraining.move_plans_between_datasets:entry_point_move_plans_between_datasets"
nnSSL_convert_MSD_dataset = "nnssl.dataset_conversion.convert_MSD_dataset:entry_point"

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "pre-commit"
]

[tool.codespell]
skip = '.git,*.pdf,*.svg'
#
# ignore-words-list = ''
